# StripeApi

./: .env  README.md  pyproject.toml
Frontend/: success.html
backend/: main.py
